--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Science fiction'
 - !lcsh 'Human-alien encounters -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: Naudsonce
 url: http://www.gutenberg.org/ebooks/19076
